# Pelement

./: README.md
backend/: db.sqlite3  manage.py  pyproject.toml
backend/battle/: admin.py  models.py  serializers.py  urls.py  views.py
backend/battle/migrations/: 0001_initial.py  0002_alter_battle_state.py
backend/card/: admin.py  models.py  serializers.py  urls.py  views.py
backend/card/migrations/: 0001_initial.py
backend/element/: admin.py  models.py  serializers.py  urls.py  views.py
backend/element/migrations/: 0001_initial.py  0002_rename_atmic_mass_element_atomic_mass_and_more.py
backend/pelement/: asgi.py  settings.py  urls.py  wsgi.py
backend/player/: admin.py  models.py  serializers.py  urls.py  views.py
backend/player/migrations/: 0001_initial.py
frontend/: api.py  constants.py  game.py  my_resource.pyxres  pyproject.toml
