[tool.poetry]
name = "pelement-backend"
version = "0.1.0"
description = ""
authors = ["wisteriahuman <wisteriahuman91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
