[tool.poetry]
name = "pelement-frontend"
version = "0.1.0"
description = ""
authors = ["wisteriahuman <wisteriahuman91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyxel = "^2.3.6"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
